Refactoring. Now I get the connection from ConnectionHolder